fix: Resolve SonarQube code quality issues
- Fix boxed Boolean expressions in ActionItemService, ReflectionService,
  StrugglingService using Boolean.TRUE/FALSE.equals()
- Reduce cognitive complexity in DashboardService.calculateStreakInfo()
  by extracting helper methods
- Extract duplicated log message to LogMessages constant class
- Fix transactional self-invocation in ScheduledTaskService,
  SocialProofService, and UserProfileService using @Lazy self-injection
- Replace Collectors.toList() with Stream.toList() in SocialProofService
  and SubscriptionService
- Replace lambda with method reference in SubscriptionService
- Add long cast in ReflectionService to prevent potential overflow
- Remove deprecated getDueDate() usage in ActionItemService
- Update affected unit tests to initialize self reference